y.output

state 0
	$accept: .expr_list $end 

	TK_NOT  shift 5
	TK_INT_LITERAL  shift 7
	TK_DOUBLE_LITERAL  shift 8
	TK_STRING_LITERAL  shift 9
	TK_MD5MOD  shift 11
	TK_STRCMP  shift 12
	TK_IDENTITY_LITERAL  shift 10
	'('  shift 6
	.  error

	function_name  goto 4
	expr  goto 2
	literal_value  goto 3
	expr_list  goto 1

state 1
	$accept:  expr_list.$end 
	expr_list:  expr_list.',' expr 

	$end  accept
	','  shift 13
	.  error


state 2
	expr_list:  expr.    (1)
	expr:  expr.cmp_op expr 
	expr:  expr.TK_IN '(' expr_list ')' 
	expr:  expr.TK_NOT TK_IN '(' expr_list ')' 
	expr:  expr.TK_BETWEEN expr TK_AND_KEYWORD expr 
	expr:  expr.TK_AND_LOGIC expr 
	expr:  expr.TK_OR_LOGIC expr 

	TK_AND_LOGIC  shift 18
	TK_OR_LOGIC  shift 19
	TK_BETWEEN  shift 17
	TK_EQ  shift 20
	TK_NE  shift 21
	TK_GT  shift 22
	TK_LT  shift 23
	TK_GE  shift 24
	TK_LE  shift 25
	TK_IN  shift 15
	TK_NOT  shift 16
	.  reduce 1 (src line 50)

	cmp_op  goto 14

state 3
	expr:  literal_value.    (3)

	.  reduce 3 (src line 55)


state 4
	expr:  function_name.'(' ')' 
	expr:  function_name.'(' expr_list ')' 

	'('  shift 26
	.  error


state 5
	expr:  TK_NOT.expr 

	TK_NOT  shift 5
	TK_INT_LITERAL  shift 7
	TK_DOUBLE_LITERAL  shift 8
	TK_STRING_LITERAL  shift 9
	TK_MD5MOD  shift 11
	TK_STRCMP  shift 12
	TK_IDENTITY_LITERAL  shift 10
	'('  shift 6
	.  error

	function_name  goto 4
	expr  goto 27
	literal_value  goto 3

state 6
	expr:  '('.expr ')' 

	TK_NOT  shift 5
	TK_INT_LITERAL  shift 7
	TK_DOUBLE_LITERAL  shift 8
	TK_STRING_LITERAL  shift 9
	TK_MD5MOD  shift 11
	TK_STRCMP  shift 12
	TK_IDENTITY_LITERAL  shift 10
	'('  shift 6
	.  error

	function_name  goto 4
	expr  goto 28
	literal_value  goto 3

state 7
	literal_value:  TK_INT_LITERAL.    (20)

	.  reduce 20 (src line 78)


state 8
	literal_value:  TK_DOUBLE_LITERAL.    (21)

	.  reduce 21 (src line 80)


state 9
	literal_value:  TK_STRING_LITERAL.    (22)

	.  reduce 22 (src line 81)


state 10
	literal_value:  TK_IDENTITY_LITERAL.    (23)

	.  reduce 23 (src line 82)


state 11
	function_name:  TK_MD5MOD.    (24)

	.  reduce 24 (src line 85)


state 12
	function_name:  TK_STRCMP.    (25)

	.  reduce 25 (src line 87)


state 13
	expr_list:  expr_list ','.expr 

	TK_NOT  shift 5
	TK_INT_LITERAL  shift 7
	TK_DOUBLE_LITERAL  shift 8
	TK_STRING_LITERAL  shift 9
	TK_MD5MOD  shift 11
	TK_STRCMP  shift 12
	TK_IDENTITY_LITERAL  shift 10
	'('  shift 6
	.  error

	function_name  goto 4
	expr  goto 29
	literal_value  goto 3

state 14
	expr:  expr cmp_op.expr 

	TK_NOT  shift 5
	TK_INT_LITERAL  shift 7
	TK_DOUBLE_LITERAL  shift 8
	TK_STRING_LITERAL  shift 9
	TK_MD5MOD  shift 11
	TK_STRCMP  shift 12
	TK_IDENTITY_LITERAL  shift 10
	'('  shift 6
	.  error

	function_name  goto 4
	expr  goto 30
	literal_value  goto 3

state 15
	expr:  expr TK_IN.'(' expr_list ')' 

	'('  shift 31
	.  error


state 16
	expr:  expr TK_NOT.TK_IN '(' expr_list ')' 

	TK_IN  shift 32
	.  error


state 17
	expr:  expr TK_BETWEEN.expr TK_AND_KEYWORD expr 

	TK_NOT  shift 5
	TK_INT_LITERAL  shift 7
	TK_DOUBLE_LITERAL  shift 8
	TK_STRING_LITERAL  shift 9
	TK_MD5MOD  shift 11
	TK_STRCMP  shift 12
	TK_IDENTITY_LITERAL  shift 10
	'('  shift 6
	.  error

	function_name  goto 4
	expr  goto 33
	literal_value  goto 3

state 18
	expr:  expr TK_AND_LOGIC.expr 

	TK_NOT  shift 5
	TK_INT_LITERAL  shift 7
	TK_DOUBLE_LITERAL  shift 8
	TK_STRING_LITERAL  shift 9
	TK_MD5MOD  shift 11
	TK_STRCMP  shift 12
	TK_IDENTITY_LITERAL  shift 10
	'('  shift 6
	.  error

	function_name  goto 4
	expr  goto 34
	literal_value  goto 3

state 19
	expr:  expr TK_OR_LOGIC.expr 

	TK_NOT  shift 5
	TK_INT_LITERAL  shift 7
	TK_DOUBLE_LITERAL  shift 8
	TK_STRING_LITERAL  shift 9
	TK_MD5MOD  shift 11
	TK_STRCMP  shift 12
	TK_IDENTITY_LITERAL  shift 10
	'('  shift 6
	.  error

	function_name  goto 4
	expr  goto 35
	literal_value  goto 3

state 20
	cmp_op:  TK_EQ.    (14)

	.  reduce 14 (src line 69)


state 21
	cmp_op:  TK_NE.    (15)

	.  reduce 15 (src line 71)


state 22
	cmp_op:  TK_GT.    (16)

	.  reduce 16 (src line 72)


state 23
	cmp_op:  TK_LT.    (17)

	.  reduce 17 (src line 73)


state 24
	cmp_op:  TK_GE.    (18)

	.  reduce 18 (src line 74)


state 25
	cmp_op:  TK_LE.    (19)

	.  reduce 19 (src line 75)


state 26
	expr:  function_name '('.')' 
	expr:  function_name '('.expr_list ')' 

	TK_NOT  shift 5
	TK_INT_LITERAL  shift 7
	TK_DOUBLE_LITERAL  shift 8
	TK_STRING_LITERAL  shift 9
	TK_MD5MOD  shift 11
	TK_STRCMP  shift 12
	TK_IDENTITY_LITERAL  shift 10
	'('  shift 6
	')'  shift 36
	.  error

	function_name  goto 4
	expr  goto 2
	literal_value  goto 3
	expr_list  goto 37

state 27
	expr:  expr.cmp_op expr 
	expr:  expr.TK_IN '(' expr_list ')' 
	expr:  expr.TK_NOT TK_IN '(' expr_list ')' 
	expr:  expr.TK_BETWEEN expr TK_AND_KEYWORD expr 
	expr:  expr.TK_AND_LOGIC expr 
	expr:  expr.TK_OR_LOGIC expr 
	expr:  TK_NOT expr.    (12)

	.  reduce 12 (src line 65)

	cmp_op  goto 14

state 28
	expr:  expr.cmp_op expr 
	expr:  expr.TK_IN '(' expr_list ')' 
	expr:  expr.TK_NOT TK_IN '(' expr_list ')' 
	expr:  expr.TK_BETWEEN expr TK_AND_KEYWORD expr 
	expr:  expr.TK_AND_LOGIC expr 
	expr:  expr.TK_OR_LOGIC expr 
	expr:  '(' expr.')' 

	TK_AND_LOGIC  shift 18
	TK_OR_LOGIC  shift 19
	TK_BETWEEN  shift 17
	TK_EQ  shift 20
	TK_NE  shift 21
	TK_GT  shift 22
	TK_LT  shift 23
	TK_GE  shift 24
	TK_LE  shift 25
	TK_IN  shift 15
	TK_NOT  shift 16
	')'  shift 38
	.  error

	cmp_op  goto 14

state 29
	expr_list:  expr_list ',' expr.    (2)
	expr:  expr.cmp_op expr 
	expr:  expr.TK_IN '(' expr_list ')' 
	expr:  expr.TK_NOT TK_IN '(' expr_list ')' 
	expr:  expr.TK_BETWEEN expr TK_AND_KEYWORD expr 
	expr:  expr.TK_AND_LOGIC expr 
	expr:  expr.TK_OR_LOGIC expr 

	TK_AND_LOGIC  shift 18
	TK_OR_LOGIC  shift 19
	TK_BETWEEN  shift 17
	TK_EQ  shift 20
	TK_NE  shift 21
	TK_GT  shift 22
	TK_LT  shift 23
	TK_GE  shift 24
	TK_LE  shift 25
	TK_IN  shift 15
	TK_NOT  shift 16
	.  reduce 2 (src line 52)

	cmp_op  goto 14

state 30
	expr:  expr.cmp_op expr 
	expr:  expr cmp_op expr.    (4)
	expr:  expr.TK_IN '(' expr_list ')' 
	expr:  expr.TK_NOT TK_IN '(' expr_list ')' 
	expr:  expr.TK_BETWEEN expr TK_AND_KEYWORD expr 
	expr:  expr.TK_AND_LOGIC expr 
	expr:  expr.TK_OR_LOGIC expr 

	.  reduce 4 (src line 57)

	cmp_op  goto 14

state 31
	expr:  expr TK_IN '('.expr_list ')' 

	TK_NOT  shift 5
	TK_INT_LITERAL  shift 7
	TK_DOUBLE_LITERAL  shift 8
	TK_STRING_LITERAL  shift 9
	TK_MD5MOD  shift 11
	TK_STRCMP  shift 12
	TK_IDENTITY_LITERAL  shift 10
	'('  shift 6
	.  error

	function_name  goto 4
	expr  goto 2
	literal_value  goto 3
	expr_list  goto 39

state 32
	expr:  expr TK_NOT TK_IN.'(' expr_list ')' 

	'('  shift 40
	.  error


state 33
	expr:  expr.cmp_op expr 
	expr:  expr.TK_IN '(' expr_list ')' 
	expr:  expr.TK_NOT TK_IN '(' expr_list ')' 
	expr:  expr.TK_BETWEEN expr TK_AND_KEYWORD expr 
	expr:  expr TK_BETWEEN expr.TK_AND_KEYWORD expr 
	expr:  expr.TK_AND_LOGIC expr 
	expr:  expr.TK_OR_LOGIC expr 

	TK_AND_LOGIC  shift 18
	TK_OR_LOGIC  shift 19
	TK_BETWEEN  shift 17
	TK_EQ  shift 20
	TK_NE  shift 21
	TK_GT  shift 22
	TK_LT  shift 23
	TK_GE  shift 24
	TK_LE  shift 25
	TK_IN  shift 15
	TK_NOT  shift 16
	TK_AND_KEYWORD  shift 41
	.  error

	cmp_op  goto 14

state 34
	expr:  expr.cmp_op expr 
	expr:  expr.TK_IN '(' expr_list ')' 
	expr:  expr.TK_NOT TK_IN '(' expr_list ')' 
	expr:  expr.TK_BETWEEN expr TK_AND_KEYWORD expr 
	expr:  expr.TK_AND_LOGIC expr 
	expr:  expr TK_AND_LOGIC expr.    (10)
	expr:  expr.TK_OR_LOGIC expr 

	TK_OR_LOGIC  shift 19
	TK_BETWEEN  shift 17
	TK_EQ  shift 20
	TK_NE  shift 21
	TK_GT  shift 22
	TK_LT  shift 23
	TK_GE  shift 24
	TK_LE  shift 25
	TK_IN  shift 15
	TK_NOT  shift 16
	.  reduce 10 (src line 63)

	cmp_op  goto 14

state 35
	expr:  expr.cmp_op expr 
	expr:  expr.TK_IN '(' expr_list ')' 
	expr:  expr.TK_NOT TK_IN '(' expr_list ')' 
	expr:  expr.TK_BETWEEN expr TK_AND_KEYWORD expr 
	expr:  expr.TK_AND_LOGIC expr 
	expr:  expr.TK_OR_LOGIC expr 
	expr:  expr TK_OR_LOGIC expr.    (11)

	TK_BETWEEN  shift 17
	TK_EQ  shift 20
	TK_NE  shift 21
	TK_GT  shift 22
	TK_LT  shift 23
	TK_GE  shift 24
	TK_LE  shift 25
	TK_IN  shift 15
	TK_NOT  shift 16
	.  reduce 11 (src line 64)

	cmp_op  goto 14

state 36
	expr:  function_name '(' ')'.    (7)

	.  reduce 7 (src line 60)


state 37
	expr_list:  expr_list.',' expr 
	expr:  function_name '(' expr_list.')' 

	','  shift 13
	')'  shift 42
	.  error


state 38
	expr:  '(' expr ')'.    (13)

	.  reduce 13 (src line 66)


state 39
	expr_list:  expr_list.',' expr 
	expr:  expr TK_IN '(' expr_list.')' 

	','  shift 13
	')'  shift 43
	.  error


state 40
	expr:  expr TK_NOT TK_IN '('.expr_list ')' 

	TK_NOT  shift 5
	TK_INT_LITERAL  shift 7
	TK_DOUBLE_LITERAL  shift 8
	TK_STRING_LITERAL  shift 9
	TK_MD5MOD  shift 11
	TK_STRCMP  shift 12
	TK_IDENTITY_LITERAL  shift 10
	'('  shift 6
	.  error

	function_name  goto 4
	expr  goto 2
	literal_value  goto 3
	expr_list  goto 44

state 41
	expr:  expr TK_BETWEEN expr TK_AND_KEYWORD.expr 

	TK_NOT  shift 5
	TK_INT_LITERAL  shift 7
	TK_DOUBLE_LITERAL  shift 8
	TK_STRING_LITERAL  shift 9
	TK_MD5MOD  shift 11
	TK_STRCMP  shift 12
	TK_IDENTITY_LITERAL  shift 10
	'('  shift 6
	.  error

	function_name  goto 4
	expr  goto 45
	literal_value  goto 3

state 42
	expr:  function_name '(' expr_list ')'.    (8)

	.  reduce 8 (src line 61)


state 43
	expr:  expr TK_IN '(' expr_list ')'.    (5)

	.  reduce 5 (src line 58)


state 44
	expr_list:  expr_list.',' expr 
	expr:  expr TK_NOT TK_IN '(' expr_list.')' 

	','  shift 13
	')'  shift 46
	.  error


state 45
	expr:  expr.cmp_op expr 
	expr:  expr.TK_IN '(' expr_list ')' 
	expr:  expr.TK_NOT TK_IN '(' expr_list ')' 
	expr:  expr.TK_BETWEEN expr TK_AND_KEYWORD expr 
	expr:  expr TK_BETWEEN expr TK_AND_KEYWORD expr.    (9)
	expr:  expr.TK_AND_LOGIC expr 
	expr:  expr.TK_OR_LOGIC expr 

	.  reduce 9 (src line 62)

	cmp_op  goto 14

state 46
	expr:  expr TK_NOT TK_IN '(' expr_list ')'.    (6)

	.  reduce 6 (src line 59)


26 terminals, 6 nonterminals
26 grammar rules, 47/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
55 working sets used
memory: parser 40/120000
37 extra closures
173 shift entries, 1 exceptions
16 goto entries
33 entries saved by goto default
Optimizer space used: output 112/120000
112 table entries, 14 zero
maximum spread: 26, maximum offset: 41
